# smart-campus-library

./: .gitignore  CMakeLists.txt  README.md  REPORT_COPY_PASTE.md
build-verify/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  OOP_GuillermoBenitez.sln  OOP_GuillermoBenitez.vcxproj  OOP_GuillermoBenitez.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-verify/OOP_GuillermoBenitez.dir/Debug/: OOP_GuillermoBenitez.exe.recipe  OOP_GuillermoBenitez.ilk
build-verify/OOP_GuillermoBenitez.dir/Debug/OOP_Guil.2896194C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-verify/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-verify/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.write.1.tlog
build-verify/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build-verify/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
docs/: class-design.md
include/: Book.h  Library.h  Loan.h  Member.h  Menu.h  Person.h  Storage.h
src/: Book.cpp  Library.cpp  Loan.cpp  Member.cpp  Menu.cpp  Person.cpp  Storage.cpp  main.cpp
